Fix scrollbar height

--- a/public/sass/app.css
+++ b/public/sass/app.css
@@ -269,7 +269,7 @@ body {
 }
 
 .splitter-right {
-  height: calc(100% - 62px);
+  height: calc(100% - 72px);
 }
 
 .h-90 {
@@ -384,6 +384,7 @@ body {
   background-image: url("/images/bg-messagebox.jpg");
   background-repeat: no-repeat;
   background-position: bottom right;
+  border-top: 1px solid #28241d;
 }
 
 .bottom-bar .price {
